Compiler Construction/AnalisadorSintaticoTarefa5/portugol/parser.automaton
State 0:
prog' -> . prog [ # ]
-- On ALGORITMO shift to state 1
-- On prog shift to state 3
-- On declaracao_algoritmo shift to state 4

State 1:
declaracao_algoritmo -> ALGORITMO . LITSTRING [ VAR INICIO FUNCAO ]
-- On LITSTRING shift to state 2

State 2:
declaracao_algoritmo -> ALGORITMO LITSTRING . [ VAR INICIO FUNCAO ]
-- On VAR reduce production declaracao_algoritmo -> ALGORITMO LITSTRING 
-- On INICIO reduce production declaracao_algoritmo -> ALGORITMO LITSTRING 
-- On FUNCAO reduce production declaracao_algoritmo -> ALGORITMO LITSTRING 

State 3:
prog' -> prog . [ # ]
-- On # accept prog

State 4:
prog -> declaracao_algoritmo . option(var_decl_block) list(func_decl) stm_block EOF [ # ]
-- On VAR shift to state 5
-- On var_decl_block shift to state 20
-- On option(var_decl_block) shift to state 21
-- On INICIO reduce production option(var_decl_block) -> 
-- On FUNCAO reduce production option(var_decl_block) -> 

State 5:
var_decl_block -> VAR . list(var_decl) [ INICIO FUNCAO ]
-- On ID shift to state 6
-- On var_decl shift to state 9
-- On separated_nonempty_list(VIRGULA,ID) shift to state 10
-- On list(var_decl) shift to state 19
-- On INICIO reduce production list(var_decl) -> 
-- On FUNCAO reduce production list(var_decl) -> 

State 6:
separated_nonempty_list(VIRGULA,ID) -> ID . [ DECLARA ]
separated_nonempty_list(VIRGULA,ID) -> ID . VIRGULA separated_nonempty_list(VIRGULA,ID) [ DECLARA ]
-- On VIRGULA shift to state 7
-- On DECLARA reduce production separated_nonempty_list(VIRGULA,ID) -> ID 

State 7:
separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA . separated_nonempty_list(VIRGULA,ID) [ DECLARA ]
-- On ID shift to state 6
-- On separated_nonempty_list(VIRGULA,ID) shift to state 8

State 8:
separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) . [ DECLARA ]
-- On DECLARA reduce production separated_nonempty_list(VIRGULA,ID) -> ID VIRGULA separated_nonempty_list(VIRGULA,ID) 

State 9:
list(var_decl) -> var_decl . list(var_decl) [ INICIO FUNCAO ]
-- On ID shift to state 6
-- On var_decl shift to state 9
-- On separated_nonempty_list(VIRGULA,ID) shift to state 10
-- On list(var_decl) shift to state 18
-- On INICIO reduce production list(var_decl) -> 
-- On FUNCAO reduce production list(var_decl) -> 

State 10:
var_decl -> separated_nonempty_list(VIRGULA,ID) . DECLARA tp_primitivo PTV [ INICIO ID FUNCAO ]
-- On DECLARA shift to state 11

State 11:
var_decl -> separated_nonempty_list(VIRGULA,ID) DECLARA . tp_primitivo PTV [ INICIO ID FUNCAO ]
-- On REAL shift to state 12
-- On LOGICO shift to state 13
-- On INTEIRO shift to state 14
-- On CARACTER shift to state 15
-- On tp_primitivo shift to state 16

State 12:
tp_primitivo -> REAL . [ VIRGULA VAR PTV INICIO FPAR ]
-- On VIRGULA reduce production tp_primitivo -> REAL 
-- On VAR reduce production tp_primitivo -> REAL 
-- On PTV reduce production tp_primitivo -> REAL 
-- On INICIO reduce production tp_primitivo -> REAL 
-- On FPAR reduce production tp_primitivo -> REAL 

State 13:
tp_primitivo -> LOGICO . [ VIRGULA VAR PTV INICIO FPAR ]
-- On VIRGULA reduce production tp_primitivo -> LOGICO 
-- On VAR reduce production tp_primitivo -> LOGICO 
-- On PTV reduce production tp_primitivo -> LOGICO 
-- On INICIO reduce production tp_primitivo -> LOGICO 
-- On FPAR reduce production tp_primitivo -> LOGICO 

State 14:
tp_primitivo -> INTEIRO . [ VIRGULA VAR PTV INICIO FPAR ]
-- On VIRGULA reduce production tp_primitivo -> INTEIRO 
-- On VAR reduce production tp_primitivo -> INTEIRO 
-- On PTV reduce production tp_primitivo -> INTEIRO 
-- On INICIO reduce production tp_primitivo -> INTEIRO 
-- On FPAR reduce production tp_primitivo -> INTEIRO 

State 15:
tp_primitivo -> CARACTER . [ VIRGULA VAR PTV INICIO FPAR ]
-- On VIRGULA reduce production tp_primitivo -> CARACTER 
-- On VAR reduce production tp_primitivo -> CARACTER 
-- On PTV reduce production tp_primitivo -> CARACTER 
-- On INICIO reduce production tp_primitivo -> CARACTER 
-- On FPAR reduce production tp_primitivo -> CARACTER 

State 16:
var_decl -> separated_nonempty_list(VIRGULA,ID) DECLARA tp_primitivo . PTV [ INICIO ID FUNCAO ]
-- On PTV shift to state 17

State 17:
var_decl -> separated_nonempty_list(VIRGULA,ID) DECLARA tp_primitivo PTV . [ INICIO ID FUNCAO ]
-- On INICIO reduce production var_decl -> separated_nonempty_list(VIRGULA,ID) DECLARA tp_primitivo PTV 
-- On ID reduce production var_decl -> separated_nonempty_list(VIRGULA,ID) DECLARA tp_primitivo PTV 
-- On FUNCAO reduce production var_decl -> separated_nonempty_list(VIRGULA,ID) DECLARA tp_primitivo PTV 

State 18:
list(var_decl) -> var_decl list(var_decl) . [ INICIO FUNCAO ]
-- On INICIO reduce production list(var_decl) -> var_decl list(var_decl) 
-- On FUNCAO reduce production list(var_decl) -> var_decl list(var_decl) 

State 19:
var_decl_block -> VAR list(var_decl) . [ INICIO FUNCAO ]
-- On INICIO reduce production var_decl_block -> VAR list(var_decl) 
-- On FUNCAO reduce production var_decl_block -> VAR list(var_decl) 

State 20:
option(var_decl_block) -> var_decl_block . [ INICIO FUNCAO ]
-- On INICIO reduce production option(var_decl_block) -> var_decl_block 
-- On FUNCAO reduce production option(var_decl_block) -> var_decl_block 

State 21:
prog -> declaracao_algoritmo option(var_decl_block) . list(func_decl) stm_block EOF [ # ]
-- On FUNCAO shift to state 22
-- On list(func_decl) shift to state 182
-- On func_decl shift to state 188
-- On INICIO reduce production list(func_decl) -> 

State 22:
func_decl -> FUNCAO . ID APAR option(fparams) FPAR option(func_type) fvar_decl func_bloc [ INICIO FUNCAO ]
-- On ID shift to state 23

State 23:
func_decl -> FUNCAO ID . APAR option(fparams) FPAR option(func_type) fvar_decl func_bloc [ INICIO FUNCAO ]
-- On APAR shift to state 24

State 24:
func_decl -> FUNCAO ID APAR . option(fparams) FPAR option(func_type) fvar_decl func_bloc [ INICIO FUNCAO ]
-- On ID shift to state 25
-- On separated_nonempty_list(VIRGULA,fparam) shift to state 28
-- On option(fparams) shift to state 29
-- On fparams shift to state 178
-- On fparam shift to state 179
-- On FPAR reduce production option(fparams) -> 

State 25:
fparam -> ID . DECLARA tp_primitivo [ VIRGULA FPAR ]
-- On DECLARA shift to state 26

State 26:
fparam -> ID DECLARA . tp_primitivo [ VIRGULA FPAR ]
-- On REAL shift to state 12
-- On LOGICO shift to state 13
-- On INTEIRO shift to state 14
-- On CARACTER shift to state 15
-- On tp_primitivo shift to state 27

State 27:
fparam -> ID DECLARA tp_primitivo . [ VIRGULA FPAR ]
-- On VIRGULA reduce production fparam -> ID DECLARA tp_primitivo 
-- On FPAR reduce production fparam -> ID DECLARA tp_primitivo 

State 28:
fparams -> separated_nonempty_list(VIRGULA,fparam) . [ FPAR ]
-- On FPAR reduce production fparams -> separated_nonempty_list(VIRGULA,fparam) 

State 29:
func_decl -> FUNCAO ID APAR option(fparams) . FPAR option(func_type) fvar_decl func_bloc [ INICIO FUNCAO ]
-- On FPAR shift to state 30

State 30:
func_decl -> FUNCAO ID APAR option(fparams) FPAR . option(func_type) fvar_decl func_bloc [ INICIO FUNCAO ]
-- On DECLARA shift to state 31
-- On option(func_type) shift to state 33
-- On func_type shift to state 177
-- On VAR reduce production option(func_type) -> 
-- On INICIO reduce production option(func_type) -> 

State 31:
func_type -> DECLARA . tp_primitivo [ VAR INICIO ]
-- On REAL shift to state 12
-- On LOGICO shift to state 13
-- On INTEIRO shift to state 14
-- On CARACTER shift to state 15
-- On tp_primitivo shift to state 32

State 32:
func_type -> DECLARA tp_primitivo . [ VAR INICIO ]
-- On VAR reduce production func_type -> DECLARA tp_primitivo 
-- On INICIO reduce production func_type -> DECLARA tp_primitivo 

State 33:
func_decl -> FUNCAO ID APAR option(fparams) FPAR option(func_type) . fvar_decl func_bloc [ INICIO FUNCAO ]
-- On VAR shift to state 5
-- On var_decl_block shift to state 20
-- On option(var_decl_block) shift to state 34
-- On fvar_decl shift to state 35
-- On INICIO reduce production option(var_decl_block) -> 

State 34:
fvar_decl -> option(var_decl_block) . [ INICIO ]
-- On INICIO reduce production fvar_decl -> option(var_decl_block) 

State 35:
func_decl -> FUNCAO ID APAR option(fparams) FPAR option(func_type) fvar_decl . func_bloc [ INICIO FUNCAO ]
-- On INICIO shift to state 36
-- On func_bloc shift to state 176

State 36:
func_bloc -> INICIO . list(stm_list) FIMFUNCAO [ INICIO FUNCAO ]
-- On SE shift to state 37
-- On RETORNE shift to state 98
-- On PARA shift to state 102
-- On LEIA shift to state 117
-- On ID shift to state 43
-- On ESCREVAL shift to state 122
-- On ESCREVA shift to state 127
-- On ESCOLHA shift to state 132
-- On ENQUANTO shift to state 136
-- On stm_se shift to state 139
-- On stm_ret shift to state 140
-- On stm_para shift to state 141
-- On stm_list shift to state 142
-- On stm_leia shift to state 143
-- On stm_escreval shift to state 144
-- On stm_escreva shift to state 145
-- On stm_escolha shift to state 146
-- On stm_enquanto shift to state 147
-- On stm_attr shift to state 148
-- On lvalue shift to state 149
-- On list(stm_list) shift to state 174
-- On fcall shift to state 154
-- On FIMFUNCAO reduce production list(stm_list) -> 

State 37:
stm_se -> SE . expr ENTAO list(stm_list) option(stm_senao) FIMSE [ SENAO SE RETORNE PARA OUTROCASO LEIA ID FIMSE FIMPARA FIMFUNCAO FIMESCOLHA FIMENQUANTO FIMALGORITMO ESCREVAL ESCREVA ESCOLHA ENQUANTO CASO ]
-- On VERDADEIRO shift to state 38
-- On NAO shift to state 39
-- On LITSTRING shift to state 40
-- On LITCHAR shift to state 41
-- On INT shift to state 42
-- On ID shift to state 43
-- On FLOAT shift to state 45
-- On FALSO shift to state 46
-- On APAR shift to state 47
-- On termo shift to state 48
-- On lvalue shift to state 49
-- On logico_value shift to state 51
-- On literal shift to state 52
-- On fcall shift to state 53
-- On expr shift to state 96

State 38:
logico_value -> VERDADEIRO . [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE ATE ]
-- On XOU reduce production logico_value -> VERDADEIRO 
-- On VIRGULA reduce production logico_value -> VERDADEIRO 
-- On SUB reduce production logico_value -> VERDADEIRO 
-- On SOMA reduce production logico_value -> VERDADEIRO 
-- On PTV reduce production logico_value -> VERDADEIRO 
-- On POTENCIA reduce production logico_value -> VERDADEIRO 
-- On PASSO reduce production logico_value -> VERDADEIRO 
-- On OU reduce production logico_value -> VERDADEIRO 
-- On MULT reduce production logico_value -> VERDADEIRO 
-- On MOD reduce production logico_value -> VERDADEIRO 
-- On MENORIGUAL reduce production logico_value -> VERDADEIRO 
-- On MENOR reduce production logico_value -> VERDADEIRO 
-- On MAIORIGUAL reduce production logico_value -> VERDADEIRO 
-- On MAIOR reduce production logico_value -> VERDADEIRO 
-- On IGUAL reduce production logico_value -> VERDADEIRO 
-- On FPAR reduce production logico_value -> VERDADEIRO 
-- On FCOL reduce production logico_value -> VERDADEIRO 
-- On FACA reduce production logico_value -> VERDADEIRO 
-- On ENTAO reduce production logico_value -> VERDADEIRO 
-- On E reduce production logico_value -> VERDADEIRO 
-- On DIVISAO reduce production logico_value -> VERDADEIRO 
-- On DIFERENTE reduce production logico_value -> VERDADEIRO 
-- On ATE reduce production logico_value -> VERDADEIRO 

State 39:
expr -> NAO . termo [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE ATE ]
-- On VERDADEIRO shift to state 38
-- On LITSTRING shift to state 40
-- On LITCHAR shift to state 41
-- On INT shift to state 42
-- On ID shift to state 43
-- On FLOAT shift to state 45
-- On FALSO shift to state 46
-- On termo shift to state 95
-- On lvalue shift to state 49
-- On logico_value shift to state 51
-- On literal shift to state 52
-- On fcall shift to state 53

State 40:
literal -> LITSTRING . [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE ATE ]
-- On XOU reduce production literal -> LITSTRING 
-- On VIRGULA reduce production literal -> LITSTRING 
-- On SUB reduce production literal -> LITSTRING 
-- On SOMA reduce production literal -> LITSTRING 
-- On PTV reduce production literal -> LITSTRING 
-- On POTENCIA reduce production literal -> LITSTRING 
-- On PASSO reduce production literal -> LITSTRING 
-- On OU reduce production literal -> LITSTRING 
-- On MULT reduce production literal -> LITSTRING 
-- On MOD reduce production literal -> LITSTRING 
-- On MENORIGUAL reduce production literal -> LITSTRING 
-- On MENOR reduce production literal -> LITSTRING 
-- On MAIORIGUAL reduce production literal -> LITSTRING 
-- On MAIOR reduce production literal -> LITSTRING 
-- On IGUAL reduce production literal -> LITSTRING 
-- On FPAR reduce production literal -> LITSTRING 
-- On FCOL reduce production literal -> LITSTRING 
-- On FACA reduce production literal -> LITSTRING 
-- On ENTAO reduce production literal -> LITSTRING 
-- On E reduce production literal -> LITSTRING 
-- On DIVISAO reduce production literal -> LITSTRING 
-- On DIFERENTE reduce production literal -> LITSTRING 
-- On ATE reduce production literal -> LITSTRING 

State 41:
literal -> LITCHAR . [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE ATE ]
-- On XOU reduce production literal -> LITCHAR 
-- On VIRGULA reduce production literal -> LITCHAR 
-- On SUB reduce production literal -> LITCHAR 
-- On SOMA reduce production literal -> LITCHAR 
-- On PTV reduce production literal -> LITCHAR 
-- On POTENCIA reduce production literal -> LITCHAR 
-- On PASSO reduce production literal -> LITCHAR 
-- On OU reduce production literal -> LITCHAR 
-- On MULT reduce production literal -> LITCHAR 
-- On MOD reduce production literal -> LITCHAR 
-- On MENORIGUAL reduce production literal -> LITCHAR 
-- On MENOR reduce production literal -> LITCHAR 
-- On MAIORIGUAL reduce production literal -> LITCHAR 
-- On MAIOR reduce production literal -> LITCHAR 
-- On IGUAL reduce production literal -> LITCHAR 
-- On FPAR reduce production literal -> LITCHAR 
-- On FCOL reduce production literal -> LITCHAR 
-- On FACA reduce production literal -> LITCHAR 
-- On ENTAO reduce production literal -> LITCHAR 
-- On E reduce production literal -> LITCHAR 
-- On DIVISAO reduce production literal -> LITCHAR 
-- On DIFERENTE reduce production literal -> LITCHAR 
-- On ATE reduce production literal -> LITCHAR 

State 42:
literal -> INT . [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE ATE ]
-- On XOU reduce production literal -> INT 
-- On VIRGULA reduce production literal -> INT 
-- On SUB reduce production literal -> INT 
-- On SOMA reduce production literal -> INT 
-- On PTV reduce production literal -> INT 
-- On POTENCIA reduce production literal -> INT 
-- On PASSO reduce production literal -> INT 
-- On OU reduce production literal -> INT 
-- On MULT reduce production literal -> INT 
-- On MOD reduce production literal -> INT 
-- On MENORIGUAL reduce production literal -> INT 
-- On MENOR reduce production literal -> INT 
-- On MAIORIGUAL reduce production literal -> INT 
-- On MAIOR reduce production literal -> INT 
-- On IGUAL reduce production literal -> INT 
-- On FPAR reduce production literal -> INT 
-- On FCOL reduce production literal -> INT 
-- On FACA reduce production literal -> INT 
-- On ENTAO reduce production literal -> INT 
-- On E reduce production literal -> INT 
-- On DIVISAO reduce production literal -> INT 
-- On DIFERENTE reduce production literal -> INT 
-- On ATE reduce production literal -> INT 

State 43:
fcall -> ID . APAR option(fargs) FPAR [ XOU VIRGULA SUB SOMA SENAO SE RETORNE PTV POTENCIA PASSO PARA OUTROCASO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR LEIA IGUAL ID FPAR FIMSE FIMPARA FIMFUNCAO FIMESCOLHA FIMENQUANTO FIMALGORITMO FCOL FACA ESCREVAL ESCREVA ESCOLHA ENTAO ENQUANTO E DIVISAO DIFERENTE CASO ATE ]
lvalue -> ID . [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE ATRIB ATE ACOL ]
-- On APAR shift to state 44
-- On XOU reduce production lvalue -> ID 
-- On VIRGULA reduce production lvalue -> ID 
-- On SUB reduce production lvalue -> ID 
-- On SOMA reduce production lvalue -> ID 
-- On PTV reduce production lvalue -> ID 
-- On POTENCIA reduce production lvalue -> ID 
-- On PASSO reduce production lvalue -> ID 
-- On OU reduce production lvalue -> ID 
-- On MULT reduce production lvalue -> ID 
-- On MOD reduce production lvalue -> ID 
-- On MENORIGUAL reduce production lvalue -> ID 
-- On MENOR reduce production lvalue -> ID 
-- On MAIORIGUAL reduce production lvalue -> ID 
-- On MAIOR reduce production lvalue -> ID 
-- On IGUAL reduce production lvalue -> ID 
-- On FPAR reduce production lvalue -> ID 
-- On FCOL reduce production lvalue -> ID 
-- On FACA reduce production lvalue -> ID 
-- On ENTAO reduce production lvalue -> ID 
-- On E reduce production lvalue -> ID 
-- On DIVISAO reduce production lvalue -> ID 
-- On DIFERENTE reduce production lvalue -> ID 
-- On ATRIB reduce production lvalue -> ID 
-- On ATE reduce production lvalue -> ID 
-- On ACOL reduce production lvalue -> ID 

State 44:
fcall -> ID APAR . option(fargs) FPAR [ XOU VIRGULA SUB SOMA SENAO SE RETORNE PTV POTENCIA PASSO PARA OUTROCASO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR LEIA IGUAL ID FPAR FIMSE FIMPARA FIMFUNCAO FIMESCOLHA FIMENQUANTO FIMALGORITMO FCOL FACA ESCREVAL ESCREVA ESCOLHA ENTAO ENQUANTO E DIVISAO DIFERENTE CASO ATE ]
-- On VERDADEIRO shift to state 38
-- On NAO shift to state 39
-- On LITSTRING shift to state 40
-- On LITCHAR shift to state 41
-- On INT shift to state 42
-- On ID shift to state 43
-- On FLOAT shift to state 45
-- On FALSO shift to state 46
-- On APAR shift to state 47
-- On termo shift to state 48
-- On separated_nonempty_list(VIRGULA,expr) shift to state 88
-- On option(fargs) shift to state 89
-- On lvalue shift to state 49
-- On logico_value shift to state 51
-- On literal shift to state 52
-- On fcall shift to state 53
-- On fargs shift to state 91
-- On expr shift to state 92
-- On FPAR reduce production option(fargs) -> 

State 45:
literal -> FLOAT . [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE ATE ]
-- On XOU reduce production literal -> FLOAT 
-- On VIRGULA reduce production literal -> FLOAT 
-- On SUB reduce production literal -> FLOAT 
-- On SOMA reduce production literal -> FLOAT 
-- On PTV reduce production literal -> FLOAT 
-- On POTENCIA reduce production literal -> FLOAT 
-- On PASSO reduce production literal -> FLOAT 
-- On OU reduce production literal -> FLOAT 
-- On MULT reduce production literal -> FLOAT 
-- On MOD reduce production literal -> FLOAT 
-- On MENORIGUAL reduce production literal -> FLOAT 
-- On MENOR reduce production literal -> FLOAT 
-- On MAIORIGUAL reduce production literal -> FLOAT 
-- On MAIOR reduce production literal -> FLOAT 
-- On IGUAL reduce production literal -> FLOAT 
-- On FPAR reduce production literal -> FLOAT 
-- On FCOL reduce production literal -> FLOAT 
-- On FACA reduce production literal -> FLOAT 
-- On ENTAO reduce production literal -> FLOAT 
-- On E reduce production literal -> FLOAT 
-- On DIVISAO reduce production literal -> FLOAT 
-- On DIFERENTE reduce production literal -> FLOAT 
-- On ATE reduce production literal -> FLOAT 

State 46:
logico_value -> FALSO . [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE ATE ]
-- On XOU reduce production logico_value -> FALSO 
-- On VIRGULA reduce production logico_value -> FALSO 
-- On SUB reduce production logico_value -> FALSO 
-- On SOMA reduce production logico_value -> FALSO 
-- On PTV reduce production logico_value -> FALSO 
-- On POTENCIA reduce production logico_value -> FALSO 
-- On PASSO reduce production logico_value -> FALSO 
-- On OU reduce production logico_value -> FALSO 
-- On MULT reduce production logico_value -> FALSO 
-- On MOD reduce production logico_value -> FALSO 
-- On MENORIGUAL reduce production logico_value -> FALSO 
-- On MENOR reduce production logico_value -> FALSO 
-- On MAIORIGUAL reduce production logico_value -> FALSO 
-- On MAIOR reduce production logico_value -> FALSO 
-- On IGUAL reduce production logico_value -> FALSO 
-- On FPAR reduce production logico_value -> FALSO 
-- On FCOL reduce production logico_value -> FALSO 
-- On FACA reduce production logico_value -> FALSO 
-- On ENTAO reduce production logico_value -> FALSO 
-- On E reduce production logico_value -> FALSO 
-- On DIVISAO reduce production logico_value -> FALSO 
-- On DIFERENTE reduce production logico_value -> FALSO 
-- On ATE reduce production logico_value -> FALSO 

State 47:
expr -> APAR . expr FPAR [ XOU VIRGULA SUB SOMA PTV POTENCIA PASSO OU MULT MOD MENORIGUAL MENOR MAIORIGUAL MAIOR IGUAL FPAR FCOL FACA ENTAO E DIVISAO DIFERENTE ATE ]
-- On VERDADEIRO shift to state 38
-- On NAO shift to state 39
-- On LITSTRING shift to state 40
-- On LITCHAR shift to state 41
-- On INT shift to state 42
-- On ID shift to state 43
-- On FLOAT shift to state 45
-- On FALSO shift to state 46
-- On APAR shift to state 47
-- On termo shift to state 48
-- On lvalue shift to state 49
-- On logico_value shift to state 51
-- On literal shift to state 52
-- On fcall shift to state 53
-- On expr shift to state 86
